--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,21 +23,19 @@
         <param-value>
             /WEB-INF/spring.xml
             /WEB-INF/spring4-servlet.xml
+            /WEB-INF/spring-security.xml
         </param-value>
     </context-param>
 
-    <!-- Spring Security
+    <!-- Spring Security -->
     <filter>
         <filter-name>springSecurityFilterChain</filter-name>
-        <filter-class>org.springframework.web.filter.DelegatingFilterProxy
-        </filter-class>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
 
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-    -->
-
 
 </web-app>
