--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
             <version>1.2.17</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
